@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>IBDocumentLocation</key>
-	<string>619 127 658 298 0 0 1280 1002 </string>
+	<string>535 132 658 298 0 0 1280 1002 </string>
 	<key>IBEditorPositions</key>
 	<dict>
 		<key>29</key>
@@ -11,6 +11,10 @@
 	</dict>
 	<key>IBFramework Version</key>
 	<string>283.0</string>
+	<key>IBOpenObjects</key>
+	<array>
+		<integer>29</integer>
+	</array>
 	<key>IBSystem Version</key>
 	<string>6L29</string>
 </dict>
