@@ -1,6 +1,7 @@
 2003-04-28	fabian
     * Dynamically change the tab size based on the number of tabs
     * Version number updated to 0.7.0
+    * Implemented "clear scrollback buffer"
     
 2003-04-28	ujwal
 
